feat: CategoryTableViewController refactor: NewPostTableViewController

--- a/KarrotMarketCloneCoding/KarrotMarketCloneCoding/View/NewPost/Xibs/TitleTableViewCell.xib
+++ b/KarrotMarketCloneCoding/KarrotMarketCloneCoding/View/NewPost/Xibs/TitleTableViewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="409" height="158"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="하이" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6wz-XC-CtN">
+                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6wz-XC-CtN">
                         <rect key="frame" x="20" y="16" width="364" height="126"/>
                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <textInputTraits key="textInputTraits"/>
