--- a/KarrotMarketCloneCoding/KarrotMarketCloneCoding/View/NewPostViews/Xibs/PhotoPickerCollectionViewCell.xib
+++ b/KarrotMarketCloneCoding/KarrotMarketCloneCoding/View/NewPostViews/Xibs/PhotoPickerCollectionViewCell.xib
@@ -24,7 +24,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                 <color key="tintColor" systemColor="systemGray2Color"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="camera" catalog="system" imagePlacement="top" title="   /10"/>
+                                <buttonConfiguration key="configuration" style="plain" image="camera.fill" catalog="system" imagePlacement="top" title="   /10"/>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="bpL-VH-QoI">
                                 <rect key="frame" x="14" y="24" width="9" height="24"/>
@@ -59,7 +59,7 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="camera" catalog="system" width="128" height="94"/>
+        <image name="camera.fill" catalog="system" width="128" height="94"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
