fix: constrain addable photos number when item register style: PhotoPickerCollectionViewCell number design

--- a/KarrotMarketCloneCoding/KarrotMarketCloneCoding/View/NewPostViews/Xibs/PhotoPickerCollectionViewCell.xib
+++ b/KarrotMarketCloneCoding/KarrotMarketCloneCoding/View/NewPostViews/Xibs/PhotoPickerCollectionViewCell.xib
@@ -24,15 +24,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                 <color key="tintColor" systemColor="systemGray2Color"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="camera.fill" catalog="system" imagePlacement="top" title="   /10"/>
+                                <buttonConfiguration key="configuration" style="plain" image="camera.fill" catalog="system" imagePlacement="top" title="0/10">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="13"/>
+                                </buttonConfiguration>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="bpL-VH-QoI">
-                                <rect key="frame" x="14" y="24" width="9" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
@@ -53,7 +48,6 @@
             </constraints>
             <connections>
                 <outlet property="pickerButton" destination="SDe-ce-cy6" id="DxF-mC-mZA"/>
-                <outlet property="selectedPhotosNumberLabel" destination="bpL-VH-QoI" id="EFv-zb-LIY"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="106.47321428571428"/>
         </collectionViewCell>
