--- a/KarrotMarketCloneCoding/KarrotMarketCloneCoding/View/NewPostViews/Xibs/OutgoingMessageCell.xib
+++ b/KarrotMarketCloneCoding/KarrotMarketCloneCoding/View/NewPostViews/Xibs/OutgoingMessageCell.xib
@@ -5,50 +5,50 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="outgoingMessage" id="zGz-n3-O6r" customClass="ConversationViewCell" customModule="KarrotMarketCloneCoding" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="395" height="60"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Jkh-c9-2I8">
-                <rect key="frame" x="0.0" y="0.0" width="395" height="60"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="88" id="SM4-bh-aTv" customClass="ConversationViewCell" customModule="KarrotMarketCloneCoding" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="390" height="88"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SM4-bh-aTv" id="q4K-0e-gNb">
+                <rect key="frame" x="0.0" y="0.0" width="390" height="88"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" editable="NO" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor i" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4vd-31-rVf" customClass="BubbleMessage" customModule="KarrotMarketCloneCoding" customModuleProvider="target">
-                        <rect key="frame" x="52.666666666666657" y="5" width="327.33333333333337" height="50"/>
+                        <rect key="frame" x="91.333333333333343" y="10" width="283.66666666666663" height="68"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="300" id="uQd-3j-tDN"/>
+                        </constraints>
                         <color key="textColor" systemColor="labelColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="97g-R4-kvh">
-                        <rect key="frame" x="14.000000000000002" y="44.666666666666664" width="28.666666666666671" height="13.333333333333336"/>
+                        <rect key="frame" x="52.666666666666664" y="58.000000000000007" width="28.666666666666664" height="13.333333333333336"/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <color key="textColor" systemColor="systemGray3Color"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="4vd-31-rVf" firstAttribute="leading" secondItem="97g-R4-kvh" secondAttribute="trailing" constant="10" id="12K-8m-MJE"/>
-                    <constraint firstItem="97g-R4-kvh" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Jkh-c9-2I8" secondAttribute="leading" constant="10" id="83b-OK-sGj"/>
-                    <constraint firstAttribute="trailing" secondItem="4vd-31-rVf" secondAttribute="trailing" constant="15" id="edj-BT-9oy"/>
-                    <constraint firstItem="4vd-31-rVf" firstAttribute="top" secondItem="Jkh-c9-2I8" secondAttribute="top" constant="5" id="fbe-Q3-GdY"/>
-                    <constraint firstAttribute="bottom" secondItem="4vd-31-rVf" secondAttribute="bottom" constant="5" id="riz-gQ-0wp"/>
-                    <constraint firstAttribute="bottom" secondItem="97g-R4-kvh" secondAttribute="bottom" constant="2" id="wSh-SY-6cU"/>
+                    <constraint firstAttribute="bottom" secondItem="4vd-31-rVf" secondAttribute="bottom" constant="10" id="3nV-PS-Rf5"/>
+                    <constraint firstAttribute="bottom" secondItem="97g-R4-kvh" secondAttribute="bottom" constant="16.666666666666657" id="4Uy-YD-QyO"/>
+                    <constraint firstItem="4vd-31-rVf" firstAttribute="leading" secondItem="97g-R4-kvh" secondAttribute="trailing" constant="10" id="8rs-yT-9mQ"/>
+                    <constraint firstItem="4vd-31-rVf" firstAttribute="top" secondItem="q4K-0e-gNb" secondAttribute="top" constant="10" id="BIN-fL-1Eh"/>
+                    <constraint firstAttribute="trailing" secondItem="4vd-31-rVf" secondAttribute="trailing" constant="15" id="a1o-Yw-0jC"/>
+                    <constraint firstItem="97g-R4-kvh" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="q4K-0e-gNb" secondAttribute="leading" constant="10" id="mek-76-D68"/>
                 </constraints>
-            </collectionViewCellContentView>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-            <size key="customSize" width="395" height="96"/>
+            </tableViewCellContentView>
             <connections>
-                <outlet property="bubbleMessage" destination="4vd-31-rVf" id="HcG-R3-Mm6"/>
-                <outlet property="dateLabel" destination="97g-R4-kvh" id="4yg-zR-xYO"/>
+                <outlet property="bubbleMessage" destination="4vd-31-rVf" id="sXN-xq-5Sr"/>
+                <outlet property="dateLabel" destination="97g-R4-kvh" id="hpq-tI-cLF"/>
             </connections>
-            <point key="canvasLocation" x="317.69230769230768" y="-88.151658767772503"/>
-        </collectionViewCell>
+            <point key="canvasLocation" x="310.76923076923077" y="3.5545023696682461"/>
+        </tableViewCell>
     </objects>
     <resources>
         <systemColor name="labelColor">
